# tg-bot-ero

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.monitoring.yml  docker-compose.yml  docker-entrypoint.sh  prd.md  pyproject.toml  release-plan.md  review.md  text-prompting.md
bot/: auth.py  avatar_analyzer.py  cache.py  database.py  main.py  main.py.bak  metrics.py  security.py  spam_classifier.py  telegram_utils.py
bot/admin/: __init__.py  router.py
bot/admin/templates/: dashboard.html
bot/services/: __init__.py  spam_detector.py
bot/utils/: file_utils.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: bot-dashboard.json  dashboard.yml
scripts/: gen_token.py
